# ml-fraud-detection-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-prod.txt  requirements-test.txt  requirements.txt  run_app.py  run_tests.py  run_tests_with_bypass.py  run_unit_tests.py
.github/workflows/: ci-cd.yml  test.yml
api/: __init__.py  dependencies.py  main.py  middleware.py
api/auth/: __init__.py  api_key_auth.py  api_key_manager.py  jwt_auth.py  models.py
api/endpoints/: __init__.py  auth.py  batch.py  cache.py  database.py  export.py  fraud_detection.py  health.py  history.py  model_management.py  monitoring.py  rate_limiting.py  websocket.py
api/exceptions/: __init__.py  handlers.py  models.py
api/middleware/: __init__.py  monitoring.py  security_enhanced.py
api/rate_limiting/: __init__.py  middleware.py  rate_limiter.py
api/utils/: logging_config.py
api/validation/: __init__.py  sanitizers.py  validators.py
cache/: __init__.py  ml_cache.py  redis_manager.py
config/: __init__.py  base.py  development.py  factory.py  logging.py  monitoring.py  production.py  secrets.py  settings.py  staging.py  testing.py  validation.py
database/: __init__.py  connection.py  models.py  repositories.py
docs/: ANALYTICS.md  API_DOCUMENTATION.md  DASHBOARD.md  MODELS.md  MONITORING.md  index.html
features/: __init__.py  feature_extractor.py  feature_pipeline.py  risk_features.py  transaction_enricher.py  user_behavior.py
infra/: README.md  docker-compose.monitoring.yml
infra/grafana/dashboards/: fraud-detection-overview.json  fraud_detection_overview.json  system-metrics.json  system_monitoring.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/postgres/: init.sql
infra/prometheus/: alerting_rules.yml  alertmanager.yml  fraud_detection_rules.yml  prometheus.yml
k8s/: configmap-secrets.yaml  deployment.yaml  fraud-api-deployment.yaml  infrastructure.yaml  monitoring.yaml  namespace.yaml  persistent-volumes.yaml  production-deployment.yaml
migrations/: 001_create_transactions_table.sql  002_create_fraud_scores_table.sql  003_create_user_profiles_table.sql  004_create_fraud_alerts_table.sql  005_create_feedback_table.sql  006_create_model_metadata_table.sql  007_create_audit_log_table.sql  008_seed_initial_data.sql
monitoring/: __init__.py  alerting.py  health_checks.py  tracing.py
scripts/: __init__.py  config_manager.py  deploy-k8s.sh  deploy-production.sh  deploy.sh  environment-config.sh  monitoring-health-check.sh  rollback-disaster-recovery.sh  run_tests.py  secrets-management.sh  setup_monitoring.py  test_monitoring.py
service/: ml_inference.py  model_loader.py  xgboost_model.py
service/api/: __init__.py  app.py  fraud.py  health.py  metrics.py
service/core/: __init__.py  config.py  logging.py  security.py
service/models/: __init__.py  base.py  prediction.py  score.py  transaction.py
shared/: models.py
static/: advanced_analytics.js  analytics_dashboard.html  dashboard.html  index.html  index_enhanced.html  index_new.html  manifest.json  models.html  monitoring.html  reports.html  service-worker.js  settings.html
static/js/: dashboard.js
streaming/: __init__.py  consumer.py  kafka_config.py  producer.py  stream_processor.py
tests/: README.md  __init__.py  conftest.py  test_actual_models.py  test_config.py  test_config_debug.py  test_core_functionality.py  test_models_direct.py  test_models_only.py  test_monitoring.py  test_service_models.py  test_simple.py  test_simple_config.py  test_ui_server.py
tests/fixtures/: __init__.py  database_fixtures.py  mock_objects.py  test_data.py
tests/integration/: test_api_endpoints.py  test_database_integration.py  test_fraud_detection_api.py  test_kafka_integration.py
tests/performance/: __init__.py  test_latency_performance.py  test_load_testing.py  test_memory_performance.py  test_performance.py  test_throughput_performance.py
tests/unit/: test_feature_pipeline.py  test_ml_inference.py  test_ml_service.py  test_model_loader.py  test_models.py  test_service_models.py
training/: data_loader.py  model_evaluator.py  model_manager.py  train_models.py
